# urx_ros2

./: .gitmodules  README.md  package.xml  setup.cfg  setup.py
launch/: ur5.launch.py
scripts/: ur_interface.py
