<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urx_ros2</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="beck@madeinspace.us">Jacob Beck</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
